samples/_failures_safe/1760961595_155994_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c40b9a5a.c: In function ‘main’:
./samples/SAFE/__tmp_c40b9a5a.c:159:17: error: ‘matrix_mult’ undeclared (first use in this function)
  159 |             if (matrix_mult
      |                 ^~~~~~~~~~~
./samples/SAFE/__tmp_c40b9a5a.c:159:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c40b9a5a.c:159:28: error: expected ‘)’ at end of input
  159 |             if (matrix_mult
      |                ~           ^
      |                            )
./samples/SAFE/__tmp_c40b9a5a.c:159:13: error: expected declaration or statement at end of input
  159 |             if (matrix_mult
      |             ^~
./samples/SAFE/__tmp_c40b9a5a.c:159:13: error: expected declaration or statement at end of input
